# backend/src/routes/router.ts
@@ -11,10 +11,7 @@ class ProductRouter extends BaseRouter{
     this.createHandleWithBody('post', '/products', (data) => ProductController.insert(data), ['ADMIN'])
     this.createHandleWithParams('get', '/products/:id', (data)=> ProductController.getById(data), 'id')
     this.createHandleWithParams('delete', '/products/:id', (data) => ProductController.delete(data), 'id', ['ADMIN'])
-    this.createHandleWithQueryParams('get', '/products/?', (data) => {
-      console.log(data);
-      return ProductController.search(...data)
-    }, ['product', 'offset', 'limit'])
+    this.createHandleWithBody('post', '/products/search', (data) => ProductController.search(data))
   }
 }
 
